--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,5 +3,5 @@ rustflags = ["--cfg=web_sys_unstable_apis"]
 
 [build]
 #just comment in the "current" target
-#target = "x86_64-unknown-linux-gnu"
-target = "x86_64-pc-windows-gnu"
+target = "x86_64-unknown-linux-gnu"
+#target = "x86_64-pc-windows-gnu"
